# polars-profiling

./: README.md  benchmark.py  pyproject.toml
polars_profiling/: __init__.py  profiles.py  templates.py
polars_profiling/templates/: base.html  dataset.html  manager.html  numeric.html  quantile.html  stats.html  temporal.html  text.html
