[project]
name = "polars-profiling"
dynamic = ["version"]
description = "Profiling for Polars datasets"
authors = [
    {name = "Ben Askew-Gale", email = "bengale2007@googlemail.com"},
]
dependencies = [
    "polars>=0.19.6",
    "pyarrow>=13.0.0",
    "jinja2>=3.1.2",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-randomly>=3.15.0",
    "faker>=19.6.2",
]
lint = [
    "mypy>=1.5.1",
    "black>=23.9.1",
    "ruff>=0.0.291",
]
interactive = [
    "ipykernel>=6.25.2",
]
benchmark = [
    "ydata-profiling>=4.5.1",
    "matplotlib==3.7.3",
    "scipy>=1.11.3",
]

[tool.black]
target-version = ["py311"]
required-version = "23.9.1"
line_length = 100
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
unfixable = []

select = [
    #"D",
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLOT",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "PD",
    "PL",
    "TRY",
    "NPY",
    "PERF",
    "RUF",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
files = ["polars_profiling", "tests"]
strict = true
ignore_missing_imports = true
